=== master

* Recognize float unsigned database types as float (keeguon, jeremyevans) (#1609)

* Support :savepoint options to Database#{after_commit,after_rollback} for making the hooks handle savepoints (jeremyevans)

* Avoid use of instance_exec in association_dependencies plugin (jeremyevans)

* Add pg_auto_constraint_validation_override to the pg_auto_constraint_validations plugin, for customizing columns and error message per constraint (jeremyevans)

* Make Database#check_constraints on PostgreSQL also include constraints where the related columns are not known (jeremyevans)

=== 5.19.0 (2019-04-02)

* Use more optimized approach to merging hashes in ruby 2.5+ (jeremyevans)

* Use SQLite extended result codes when using ruby-sqlite3 1.4.0+ (jeremyevans)

* Recognize additional SQLite extended result codes in the shared sqlite adapter (jeremyevans)

* Add Database#rename_enum_value to the pg_enum extension (AlexWayfer) (#1603)

* Make Database#drop_table delete constraint validations metadata for that table if using the constraint_validations extension (jeremyevans)

* Speed up row fetching in the sqlite adapter (jeremyevans)

* Speed up row fetching and type conversion in the sqlanywhere adapter (jeremyevans)

=== 5.18.0 (2019-03-01)

* Use singleton .call methods on plain objects instead of procs/methods for faster type conversion (jeremyevans)

* Add Sequel::SQL::Blob.call to avoid indirection when converting values from the database (jeremyevans)

* Use while instead of each for inner loops in sqlite and jdbc adapters for better performance (jeremyevans)

* Make after_initialize plugin not make the argument to Model.call optional (jeremyevans)

* Allow Dataset#paged_each to be called without a block in the postgres and mysql2 adapters (jeremyevans)

* Remove flow-control exceptions in connection_expiration and connection_validator extensions (jeremyevans)
